--- a/css/main.css
+++ b/css/main.css
@@ -13,30 +13,92 @@
 
 /*NAVIGATIONAL CSS:*/
 
-ul.topbar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+/* Add a black background color to the top navigation */
+.topnav {
+  margin: 5px;
+  overflow: auto;
+  width: 100%;
   overflow: hidden;
-  background-color: #333;
+}
+li:last-child {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+}
+ul {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+li {
+  display: flex;
+  margin-left: 10px;
+  padding: 0px;
+
+} li a{
+  font-size: 40px;
+  justify-content: left;
+  align-self: center;
+  font-family: "Lucida Console";
+  overflow: hidden;
 }
 
-li.topbar {
-  float: left;
-}
-
-li a {
+#logoSpecs{
+  max-width: 50px;
+  max-height: 50px;
   display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+}
+
+#centerInDiv{
+  margin: 0 auto;
 }
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: #111;
+  opacity: 0.5;
 }
+
+/* SAMUELS ANIMATION CSS*/
+
+#typing-text-container {
+  height: 100px;
+  font-size: 80px;
+  font-family: "Lucida Console";
+  color: black;
+}
+
+#typing-text-container::after {
+  display: inline-block;
+  height: 70%;
+  width: 6px;
+  background: black;
+  content: "";
+  animation: blink 1000ms linear 0ms infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  49.99% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  99.99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 
 /* ==========================================================================
    I really don't understand boilerplate yet so here's the stuff
