--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ body{
     padding: 0;
     list-style: none;    
     text-decoration: none;
+    align-items:center;
+    justify-content: center;
 }
 
 .main-nav a {
@@ -55,9 +57,11 @@ body{
 .main-header{
     display: flex;
     justify-content:center;
+    align-self: center;
     align-items:center;
-    height: 100px;
-    width: 100%;
+    height: 80px;
+    width: 200%;
+    box-shadow: 5px 10px #888888;
 }
 
 .container{
@@ -71,6 +75,7 @@ body{
     font-size: 3em;
     margin-top: 0;
     margin-bottom: 1rem;
+    align-self: center;
 }
 
 .bio{
