--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,9 @@ body{
     align-self: center;
     align-items:center;
     height: 80px;
-    width: 200%;
-    box-shadow: 5px 10px #888888;
+    width: 100vw;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 30px 1px rgba(0, 0, 0, 0.30);
 }
 
 .container{
