--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@ body{
     padding: 5rem;
 }
 
+.main-nav img{
+    justify-self: center;
+}
+
 .main-nav a:hover{
     color: #ababb1;
 }
@@ -76,7 +80,6 @@ body{
     font-size: 3em;
     margin-top: 0;
     margin-bottom: 1rem;
-    align-self: center;
 }
 
 .bio{
