--- a/styles.css
+++ b/styles.css
@@ -80,12 +80,14 @@ body{
     font-size: 3em;
     margin-top: 0;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .bio{
     font-weight:500;
     font-size: 1.2em;
     margin-bottom: 2rem;
+    text-align: justify;
 }
 
 .main-button{
