--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body{
 .full-height-grow{
     display: flex;
     flex-direction: column;
+    text-decoration: none;
 }
 
 .brand-logo{
@@ -47,7 +48,9 @@ body{
 }
 
 .main-nav img, .footer-nav img{
+    align-self: center;
     justify-self: center;
+    text-decoration: none;
 }
 
 .main-nav a:hover .footer-nav a:hover{
@@ -98,6 +101,8 @@ body{
     max-width: 1200;
     margin: 0 auto;
     padding: 0 40px;
+    text-decoration: none;
+    overflow: hidden;
 }
 
 .title{
@@ -106,6 +111,7 @@ body{
     margin-top: 0;
     margin-bottom: 1rem;
     text-align: center;
+    text-decoration: none;
 }
 
 .bio{
